@@ -334,6 +334,20 @@ name|lucene
 operator|.
 name|util
 operator|.
+name|BitDocIdSet
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
 name|BytesRef
 import|;
 end_import
@@ -363,6 +377,20 @@ operator|.
 name|util
 operator|.
 name|DocIdSetBuilder
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|FixedBitSet
 import|;
 end_import
 
@@ -1292,6 +1320,34 @@ argument_list|(
 name|field
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|terms
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+operator|new
+name|WeightOrDocIdSet
+argument_list|(
+operator|new
+name|BitDocIdSet
+argument_list|(
+operator|new
+name|FixedBitSet
+argument_list|(
+name|reader
+operator|.
+name|maxDoc
+argument_list|()
+argument_list|)
+argument_list|,
+literal|0
+argument_list|)
+argument_list|)
+return|;
+block|}
 name|TermsEnum
 name|termsEnum
 init|=
